Fix page alignment and add media queries

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,13 +13,15 @@ body {
 }
 
 .header-container {
-    padding-top: 170px;
+    margin-top: 170px;
+    margin-bottom: 30px;
 }
 
 .header {
     margin-top: 20px;
     margin-bottom: 20px;
-    text-align: center;
+    width: 100%;
+    padding-left: 200px;
 }
 
 #logo {
@@ -124,5 +126,21 @@ a.text-black.nav-link.d-block.d-lg-none {
         background-color: rgba(0, 0, 0, 0.2);
         color: white;
     }
+
+    .header-container {
+        margin-top: 90px;
+    }
 }
 
+@media (max-width: 750px) {
+    .header {
+        text-align: center;
+        padding-left: 0;
+    }
+}
+
+@media (min-width: 620px) and (max-width: 992px) {
+    .header-container {
+        margin-top: 120px;
+    }
+}
